# Docker

./: .gitignore  LICENSE  README.md
Cpp/: CMakeLists.txt  Dockerfile
Cpp/src/: fem_solver.cpp  fem_solver.h  mesh.cpp  mesh.h  solver.cpp  solver.h
Fortran/: .bash_history  Dockerfile  README.md  runFortran.sh
Python/: Dockerfile  README.md  requirements.txt  runPython.sh
